copying only tomcat folder

--- a/deployscripts/tomcat_deploy.yaml
+++ b/deployscripts/tomcat_deploy.yaml
@@ -11,16 +11,12 @@
     copy: 
       src: '{{ warFilePath }}'
       dest: /opt/tomcat/webapps/petclinic.war    
-  - name: copy war file to web servers
-    copy: 
-      src: '{{ warFilePath }}'
-      dest: "/home/azadmin"    
-  #   notifier: restart tomcat
+    notifier: restart tomcat
   
-  # handlers:
-  #   - name: restart tomcat
-  #     service:
-  #       name: tomcat
-  #       state: restarted
+  handlers:
+    - name: restart tomcat
+      service:
+        name: tomcat
+        state: restarted
 
   
